...
    {
      'title': 'Actualizaciones en Tiempo Real',
      'description': 'Mantente al día con las últimas tendencias del mercado.',
      'symbol': '◎',
    },
    {
      'title': 'Inversiones Inteligentes',
      'description':
          'Analiza y toma decisiones informadas para tus inversiones.',
      'symbol': '⟠',
    },
  ];

...
                      child: InkWell(
                        onTap: _navigateToHome,
                        child: Container(
                          padding: const EdgeInsets.symmetric(vertical: 12),
                          child: Center(
                            child: Text(
                              'Comenzar',
                              style: TextStyle(
                                color:
                                    isDarkTheme ? Colors.white : Colors.black,
                                fontSize: 17,
                                fontWeight: FontWeight.w600,
                                letterSpacing: -0.2,
...
