...
  @override
  Widget build(BuildContext context) {
    final Coin coin = widget.coin;

    return Scaffold(
      appBar: AppBar(
        title: const Text("Detalles"),
        elevation: 0,
        centerTitle: true,
      ),
      body: SingleChildScrollView(
        padding: const EdgeInsets.all(24.0),
        child: Column(
...
