...
            },
            child: const Icon(Icons.filter_list, color: Colors.white),
          ),
        ],
      ),
      appBar: AppBar(
        title: const Text('Mercado Crypto'),
        centerTitle: true,
        actions: [
          IconButton(
            icon: const Icon(Icons.brightness_6),
            onPressed: _toggleTheme,
          ),
...
