...
    final generalTextColor = Theme.of(context).brightness == Brightness.dark
        ? Colors.white
        : Colors.grey[700];

    return Scaffold(
      appBar: AppBar(
        title: const Text('Detalle del NFT'),
        centerTitle: true,
      ),
      body: FutureBuilder<Nft>(
        future: _nftFuture,
        builder: (context, snapshot) {
          if (snapshot.connectionState == ConnectionState.waiting) {
...
